[PROD] Solved decode issue in jumpC

--- a/C/production/JumpC/Jump_CSS/gtk.css
+++ b/C/production/JumpC/Jump_CSS/gtk.css
@@ -71,80 +71,6 @@ button {
 }
 
 
-.gtkstyle-fallback {
-  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-
-  border: 1.5px solid;
-  /* border width */
-  /* xxx   border: 1px solid; */
-
-  border-radius: 6px;
-  /* roundness of corners */
-  /* xxx  border-radius: 3px; */
-
-  /*padding: 115px 8px;*/
-
-  color: #fdfdfd;
-  /* green text */
-  /* xxx  color: #303030; */
-
-  outline-color: rgba(48, 48, 48, 0.3);
-
-  border-color: #312929;
-  /* blue border */
-  /* xxx border-color: #BDBDBD; */
-
-  /* xxx added line */
-  /*background-image: radial-gradient(ellipse at center, yellow 20%, blue 80%); */
-  /* see button active */
-
-  background-color: rgb(180, 156, 89);
-}
-
-.gtkstyle-fallback:hover {
-  background-color: white;
-  color: #303030;
-}
-
-.gtkstyle-fallback:active {
-  transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-
-  border: 1.5px solid;
-  /* border width */
-  /* xxx   border: 1px solid; */
-
-  border-radius: 6px;
-  /* roundness of corners */
-  /* xxx  border-radius: 3px; */
-
-  /*padding: 115px 8px;*/
-
-  color: #fdfdfd;
-  /* green text */
-  /* xxx  color: #303030; */
-
-  outline-color: rgba(48, 48, 48, 0.3);
-
-  border-color: #312929;
-  /* blue border */
-  /* xxx border-color: #BDBDBD; */
-
-  /* xxx added line */
-  /*background-image: radial-gradient(ellipse at center, yellow 20%, blue 80%); */
-  /* see button active */
-
-  background-color: rgb(180, 156, 89);
-}
-
-.gtkstyle-fallback:disabled {
-  background-color: #f9f9f9;
-  color: rgba(48, 48, 48, 0.55);
-}
-
-.gtkstyle-fallback:selected {
-  background-color: #92b372;
-  color: #ffffff;
-}
 
 button:hover {
   color: #303030;
